--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -39,9 +39,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.webkit:webkit:1.4.0'
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
+    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation 'androidx.webkit:webkit:1.6.1'
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 }
